Next update: copy homescreen code from rocketer, add body collision, add settings (add option to turn off health bars when max health, add option to change debug text color to #ccc)

ALPHA 0.0.2 - April 15, 2025
- Added a death screen and respawning
- Added a simple home screen
ALPHA 0.0.1 - April 14, 2025
- Moved the game to this website
- This game is a rewritten version of the old singleplayer rocketer
- Fixed the map borders and health bars